--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "frontend": "cd Project2Ecommerce && npm run dev",
     "test": "jest --runInBand --detectOpenHandles --coverage",
+    "test:e2e": "playwright test",
     "lint": "echo \"no lint configured\""
   },
   "author": "vilaskolhe",
   "license": "MIT",
   "dependencies": {
     "ajv": "^8.12.0",
+    "ajv-formats": "^3.0.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "kafkajs": "^2.2.4",
     "uuid": "^9.0.0",
-    "ws": "^8.13.0",
-    "kafkajs": "^2.2.4"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "jest": "^29.6.1",
-    "supertest": "^6.4.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "6.3.3"
   }
 }
